--- a/index.html
+++ b/index.html
@@ -6,11 +6,253 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer gear</title>
+    <script src="https://kit.fontawesome.com/c01012a7ca.js" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Influencer</h1>
+    <main>
+        <section class="top-banner">
+            <div class="top-banner-description">
+                <h1 class="title">Start your Journey as
+                    Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.</p>
+                <button><a class="anchor-button" href="">prebook now</a><i class="fa-solid fa-arrow-right"></i></button>
+
+            </div>
+            <div class="top-banner-image">
+                <img class="top-image" src="images/main-camera.png" alt="">
+                <img class="position-image" src="images/Circle design.svg" alt="">
+            </div>
+        </section>
+        <!-- ---------------logos of company------ -->
+        <hr>
+        <section class="logos">
+            <div class="logo-item">
+                <img src="/logos/Alibaba.svg" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="/logos/Amazon.svg" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="/logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="/logos/Ebay.svg" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="/logos/Rakuten.svg" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="/logos/Target.svg" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="/logos/Walmart.svg" alt="">
+            </div>
+        </section>
+        <hr>
+        <!-- ------------logo end here---------- -->
+    </main>
+    <!-- ---------popular collection start here---------->
+    <section class="cards-section">
+        <h2 class="popular-section-title" >Popular Collection</h2>
+        <div class="cards">
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/tripod.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/mic.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>MicroPhone</h3>
+                    <h4>$120.25</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/airpod.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>AirBuds</h3>
+                    <h4>$100.00</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/drone.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>Drone</h3>
+                    <h4>$980.25</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/lights.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>Light Setup</h3>
+                    <h4>$1200.00</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/single-light.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>PhotoShoot Set</h3>
+                    <h4>$820.40</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/camera.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>Vlogging Camera</h3>
+                    <h4>$1800.80</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/setup.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>Green Screen</h3>
+                    <h4>$25.48</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="/images/action.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h3>Action Camera</h3>
+                    <h4>$380.00</h4>
+                    <div class="ratings">
+                        <div class="ratings-stars">
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star icon-color"></i>
+                            <i class="fa-solid fa-star-half-stroke icon-color"></i>
+                        </div>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
 </body>
 
 </html>
