--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </main>
     <!-- ---------popular collection start here---------->
     <section class="cards-section">
-        <h2 class="popular-section-title" >Popular Collection</h2>
+        <h2 class="popular-section-title">Popular Collection</h2>
         <div class="cards">
             <div class="card">
                 <div class="card-image">
@@ -249,10 +249,35 @@
                         Buyers protection possible!</p>
                 </div>
             </div>
-
-
+        </div>
+    </section>
+    <!--------------featured products---------------->
+    <section class="featured-part">
+        <div class="featured-main">
+            <div class="featured-image">
+                <img src="/images/gear.png" alt="">
+            </div>
+            <div class="featured-description">
+                <h1>Featured products at one place</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque doloremque dolor ea non facere
+                    expedita?</p>
+                <button><a class="anchor-button" href="">Join Now</a><i class="fa-solid fa-arrow-right"></i></button>
+            </div>
         </div>
     </section>
 </body>
+<footer>
+
+    <h3>Influencer products</h3>
+    <small>Copyright © 2020 influencer products
+        All rights reserved</small>
+    <div>
+        <i class="fa-brands fa-instagram social-icons "></i>
+        <i class="fa-brands fa-linkedin  social-icons "></i>
+        <i class="fa-brands fa-twitter   social-icons "></i>
+        <i class="fa-brands fa-youtube   social-icons "></i>
+    </div>
+
+</footer>
 
 </html>
