--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
         <hr>
         <section class="logos">
             <div class="logo-item">
-                <img src="/logos/Alibaba.svg" alt="">
+                <img src="logos/Alibaba.svg" alt="">
             </div>
             <div class="logo-item">
-                <img src="/logos/Amazon.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
             </div>
             <div class="logo-item">
-                <img src="/logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
             </div>
             <div class="logo-item">
-                <img src="/logos/Ebay.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
             </div>
             <div class="logo-item">
-                <img src="/logos/Rakuten.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
             </div>
             <div class="logo-item">
-                <img src="/logos/Target.svg" alt="">
+                <img src="logos/Target.svg" alt="">
             </div>
             <div class="logo-item">
-                <img src="/logos/Walmart.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
             </div>
         </section>
         <hr>
@@ -62,7 +62,7 @@
         <div class="cards">
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/tripod.png" alt="">
+                    <img src="images/tripod.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>Flex Tripod</h3>
@@ -83,7 +83,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/mic.png" alt="">
+                    <img src="images/mic.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>MicroPhone</h3>
@@ -104,7 +104,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/airpod.png" alt="">
+                    <img src="images/airpod.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>AirBuds</h3>
@@ -125,7 +125,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/drone.png" alt="">
+                    <img src="images/drone.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>Drone</h3>
@@ -146,7 +146,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/lights.png" alt="">
+                    <img src="images/lights.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>Light Setup</h3>
@@ -167,7 +167,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/single-light.png" alt="">
+                    <img src="images/single-light.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>PhotoShoot Set</h3>
@@ -188,7 +188,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/camera.png" alt="">
+                    <img src="images/camera.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>Vlogging Camera</h3>
@@ -209,7 +209,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/setup.png" alt="">
+                    <img src="images/setup.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>Green Screen</h3>
@@ -230,7 +230,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/action.png" alt="">
+                    <img src="images/action.png" alt="">
                 </div>
                 <div class="card-description">
                     <h3>Action Camera</h3>
@@ -255,7 +255,7 @@
     <section class="featured-part">
         <div class="featured-main">
             <div class="featured-image">
-                <img src="/images/gear.png" alt="">
+                <img src="images/gear.png" alt="">
             </div>
             <div class="featured-description">
                 <h1>Featured products at one place</h1>
